# OpenTier

./: README.md
server/api/: .env.example  .gitignore  Cargo.toml  README.md  build.rs
server/api/migrations/: 20260111000001_create_users_table.down.sql  20260111000001_create_users_table.up.sql  20260111000002_create_sessions_table.down.sql  20260111000002_create_sessions_table.up.sql  20260111000003_create_accounts_table.down.sql  20260111000003_create_accounts_table.up.sql  20260111000004_create_verification_tokens.down.sql  20260111000004_create_verification_tokens.up.sql  20260111000005_create_password_reset_tokens.down.sql  20260111000005_create_password_reset_tokens.up.sql  20260114000001_create_conversations_table.down.sql  20260114000001_create_conversations_table.up.sql  20260114000003_create_messages_table.down.sql  20260114000003_create_messages_table.up.sql
server/api/src/: main.rs
server/api/src/admin/: mod.rs
server/api/src/auth/: authorization.rs  background.rs  errors.rs  handlers.rs  mod.rs  password.rs  role.rs  service.rs  session.rs  tokens.rs  types.rs
server/api/src/chat/: error.rs  handlers.rs  types.rs
server/api/src/common/: background.rs  mod.rs  validation.rs
server/api/src/config/: cors.rs  database.rs  env.rs  (+2 more)
server/intelligence/: .env.example  .gitignore  README.md  main.py  pyproject.toml  pytest.ini
server/intelligence/core/: config.py  lifecycle.py  logging.py
server/intelligence/engine/: __init__.py
server/intelligence/interfaces/: chat.py  health.py  resource.py
server/intelligence/migrations/: 20260115000001_enable_pgvector.down.sql  20260115000002_create_documents_table.down.sql  20260115000002_create_documents_table.up.sql  20260115000003_create_document_chunks_table.down.sql  20260115000003_create_document_chunks_table.up.sql  20260115000004_create_ingestion_jobs_table.down.sql  20260115000004_create_ingestion_jobs_table.up.sql  20260115000005_create_chat_messages_table.down.sql  20260115000005_create_chat_messages_table.up.sql  20260115000006_create_hybrid_search_function.down.sql  20260115000006_create_hybrid_search_function.up.sql  20260115000009_create_user_memories.down.sql  20260115000009_create_user_memories.up.sql
server/intelligence/script/: check_memory.py  clear_memory.py  generate_protos.py  migrate.py
server/intelligence/test/: __init__.py  conftest.py  debug_startup.py  test_chat.py  test_health.py  test_resource.py
(+176 files in other folders)
