[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1"

# gRPC
tonic = "0.14.2"
prost = "0.14.1"
tonic-prost = "0.14.2"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Errors & IDs
thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Observability
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# Database
sqlx = { version = "0.8.3", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono",
  "macros",
  "ipnetwork"
] }

dotenvy = "0.15.7"

# Authentication
bcrypt = "0.15"
oauth2 = "4.4"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
ipnetwork = "0.21.1"

# Rate Limiting
tower = "0.5.2"
tower-http = { version = "0.6", features = ["cors", "trace"] }
governor = "0.10.4"
tower_governor = { version = "0.8.0", features = ["axum"] }

# Streaming
futures = "0.3"
async-stream = "0.3"

# Cryptography
sha2 = "0.10"

# OpenAPI

# Utilities
regex = "1.10.4"
once_cell = "1.19.0"

[profile.dev]
split-debuginfo = "unpacked"

[build-dependencies]
tonic-prost-build = "0.14.2"
